# relaxation-labeling

./: requirements.txt
checkerboard/: relax.py
core/: relax.py
cpp/source/: CMakeLists.txt  README.md  compatibility.cpp  compatibility.hpp  compatibility_background_foreground.cpp  compatibility_background_foreground.hpp  compatibility_chessboard.cpp  compatibility_chessboard.hpp  compatibility_dummy.cpp  compatibility_dummy.hpp  install_dependencies.sh  papas_git_token  relax.cpp  relax_demo.cpp
cpp/source/problems/: CMakeLists.txt  compatibility.cpp  compatibility.hpp
cpp/source/problems/background_foreground/: CMakeLists.txt  compatibility_background_foreground.cpp  compatibility_background_foreground.hpp
cpp/source/problems/chessboard/: CMakeLists.txt  compatibility_chessboard.cpp  compatibility_chessboard.hpp
cpp/source/problems/dummy/: CMakeLists.txt  compatibility_dummy.cpp  compatibility_dummy.hpp
cpp/source/problems/points3d/: CMakeLists.txt  compatibility_points3d.cpp  compatibility_points3d.hpp
cpp/source/problems/points3d_3pair/: CMakeLists.txt  compatibility_points3d_3pair.cpp  compatibility_points3d_3pair.hpp
cpp/source/problems/points3d_3pairs/: CMakeLists.txt  compatibility_points3d_3pairs.cpp  compatibility_points3d_3pairs.hpp
cpp/source/relax/: CMakeLists.txt  relax.cpp  relax.hpp  relax_demo.cpp  relax_inwork.cpp
cpp/source/relax3Pairs/: CMakeLists.txt  relax3Pairs.cpp  relax3Pairs.hpp  relax3Pairs_demo.cpp
identify-chemical-structures/: README.md  identify_chemical_structures.py
identify-points/: identify_points.py
(+41 files in other folders)
